
* Added --server.jwt-secret-keyfile to arangosh.

* fixed `Buffer.alloc` method

* `Buffer` is now iterable and accepts `ArrayBuffer` values as input

* enabled dropping an index by its name

* fixed lookup of index from collection by fully qualified name, e.g.
  `db.testCollection.index('testCollection/primary')`.


v3.5.0-rc.3 (2019-05-31)
------------------------
  
* fix issue #9106: Sparse Skiplist Index on multiple fields not used for FILTER + SORT query

  Allow AQL query optimizer to use sparse indexes in more cases, specifically when
  indexes could not be used for filtering and there finally was an `EnumerateCollectionNode`
  in the query execution plan followed by a `SortNode`. In this case, sparse indexes were
  not considered for enumeration in sorted order, because it was unclear to the optimizer
  if the result set would contain null values or not.

* upgrade RocksDB to version 6.2

* updated ArangoDB Starter to 0.14.4

* The system collection '_jobs' will from now on be created with non-unique, non-sparse indexes.

* Bugfix for smart graph traversals with uniqueVertices: path, which could
  sometimes lead to erroneous traversal results

* Pregel algorithms can be run with the option "useMemoryMaps: true" to be 
  able to run algorithms on data that is bigger than the available RAM.

* fix a race in TTL thread deactivation/shutdown

* fixed internal issue #3919: The web UI is now using precompiled ejs templates.

* fixed agency issue in abort of cleanOutServer job

v3.5.0-rc.2 (2019-05-23)
------------------------

* fixed "collection not found" exception during setup of 3-way smart join queries in the
  cluster

* fixed an edge case of handling `null` values in the AQL function `MIN` for input
  sequences that started with a `null` value. In this case, `null` was always returned as the
  minimum value even though other non-null values may have followed, and `MIN` was supposed