@@ -1161,7 +1161,7 @@ Slice Node::getArray() const {
 
 void Node::clear() {
   _children.clear();
-  _ttl = std::chrono::system_clock::time_point();
+  removeTimeToLive();
   _value.clear();
   _vecBuf.clear();
   _vecBufDirty = true;
