@@ -736,7 +736,57 @@ function agencyTestSuite () {
       assertEqual(readAndCheck([["/a/u"]]), [{"a":{"u":26}}]);
       wait(3.0);  // key should still be there
       assertEqual(readAndCheck([["/a/u"]]), [{"a":{"u":26}}]);
-    },
+      writeAndCheck([
+        [{ "/a/u": { "op":"set", "new":{"z":{"z":{"z":"z"}}}, "ttl":30 }}]]);
+
+      // temporary to make sure we remain with same leader.
+      var tmp = agencyLeader;
+      var leaderErr = false;
+
+      let res = request({url: agencyLeader + "/_api/agency/stores",
+                         method: "GET", followRedirect: true});
+      if (res.statusCode === 200) {
+        res.bodyParsed = JSON.parse(res.body);
+        if (res.bodyParsed.read_db[0].a !== undefined) {
+          assertTrue(res.bodyParsed.read_db[1]["/a/u"] >= 0);
+        } else {
+          leaderErr = true; // not leader
+        }
+      } else {
+        assertTrue(false); // no point in continuing
+      }
+
+      // continue ttl test only, if we have not already lost
+      // touch with the leader
+      if (!leaderErr) {
+        writeAndCheck([
+          [{ "/a/u": { "op":"set", "new":{"z":{"z":{"z":"z"}}} }}]]);
+
+        res = request({url: agencyLeader + "/_api/agency/stores",
+                       method: "GET", followRedirect: true});
+
+        // only, if agency is still led by same guy/girl
+        if (agencyLeader === tmp) {
+          if (res.statusCode === 200) {
+            res.bodyParsed = JSON.parse(res.body);
+            console.warn(res.bodyParsed.read_db[0]);
+            if (res.bodyParsed.read_db[0].a !== undefined) {
+              assertTrue(res.bodyParsed.read_db[1]["/a/u"] === undefined);
+            } else {
+              leaderErr = true;
+            }
+          } else {
+            assertTrue(false); // no point in continuing
+          }
+        } else {
+          leaderErr = true;
+        }
+      }
+
+      if (leaderErr) {
+        require("console").warn("on the record: status code was " + res.statusCode + " couldn't test proper implementation of TTL at this point. not going to startle the chickens over this however and assume rare leader change within.");
+      }
+     },
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief Test "push" operator
