@@ -14,6 +14,7 @@ devel
 * fixed lookup of index from collection by fully qualified name, e.g.
   `db.testCollection.index('testCollection/primary')`.
 
+* fixed agency bug with TTL object writes discovered in 3.4.6
 
 v3.5.0-rc.3 (2019-05-31)
 ------------------------
